--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
   </script>
 
-<script type="text/javascript" src="./google-doc-url.js"></script>
+ // load GeoJSON from an external file
+  $.getJSON("rodents.geojson",function(data){
+    // add GeoJSON layer to the map once the file is loaded
+    L.geoJson(data).addTo(map);
 
 
 </body>
