--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </script>
 
  // load GeoJSON from an external file
-  $.getJSON("rodents.geojson",function(data){
+  $.getJSON("geodata/1test.geojson",function(data){
     // add GeoJSON layer to the map once the file is loaded
     L.geoJson(data).addTo(map);
 
