--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         OpenStreetMap</a> contributors, &copy;\
         <a href="https://carto.com/attribution">CARTO</a>'
   }).addTo(map);
+    
  // load GeoJSON from an external file
-  $.getJSON("geodata/1test.geojson",function(data){
+  $.getJSON("1test.geojson",function(data){
     // add GeoJSON layer to the map once the file is loaded
-    L.geoJson(data).addTo(map);
+    L.geoJson(1test.geojson).addTo(map);
   </script>
 
 
