--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   }).addTo(map);
     
  // load GeoJSON from an external file
-  $.getJSON("1test.geojson",function(data){
+  $.getJSON("1test.geojson",add(data){
     // add GeoJSON layer to the map once the file is loaded
     L.geoJson(1test.geojson).addTo(map);
   </script>
