--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <!-- Load Leaflet code library: see https://leafletjs.com/download.html -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
-
-    <script src="1test.geojson" type="text/javascript"></script>
-
-
   
   <!-- Position the map and title with Cascading Style Sheet (CSS) -->
   <style>
@@ -44,12 +40,10 @@
         <a href="https://carto.com/attribution">CARTO</a>'
   }).addTo(map);
     
- // load GeoJSON from an external file
-var layername = new L.LayerGroup();
-        L.geoJson(1test.geojson, {style: hydrosStyle}).addTo(hydro);
-
-  
-  
+  fetch("countries.geojson").then(res => res.json()).then(data => {
+    // add GeoJSON layer to the map once the file is loaded
+    L.geoJson(data).addTo(map);
+  });
   </script>
 
 
