--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://carto.com/attribution">CARTO</a>'
   }).addTo(map);
     
-  fetch("countries.geojson").then(res => res.json()).then(data => {
+  fetch("1test.geojson").then(res => res.json()).then(data => {
     // add GeoJSON layer to the map once the file is loaded
     L.geoJson(data).addTo(map);
   });
