--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
  $.getJSON("1test.geojson",function(1test.geojson){
-    L.geoJson( klimagutachten, {
+    L.geoJson( 1test.geojson, {
 		style: function(feature){
 			return {
 				color: "#e60000",
