--- a/index.html
+++ b/index.html
@@ -38,16 +38,7 @@
       attribution: '&copy; <a href="https://osm.org/copyright">\
         OpenStreetMap</a> contributors, &copy;\
         <a href="https://carto.com/attribution">CARTO</a>'
-  $.getJSON("1test.geojson",function(1test.geojson){
-    L.geoJson( 1test.geojson, {
-		style: function(feature){
-			return {
-				color: "#e60000",
-				weight: 4,
-				fillColor: "#e60000",
-				fillOpacity: .3
-			};
-		},}).addTo(map);
+,}).addTo(map);
     
 
 
