--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <a href="https://carto.com/attribution">CARTO</a>'
 ,}).addTo(map);
     
+ <script type="text/javascript" src="./google-doc-url.js"></script>
+  <script type="text/javascript" src="./scripts/constants.js"></script>
+  <script type="text/javascript" src="./scripts/palette.js"></script>
+  <script type="text/javascript" src="./scripts/polylabel.js"></script>
+  <script type="text/javascript" src="./scripts/map.js"></script>
 
-
- 
-
-    
-  </script>
-
-
+</body>
+</html>
 
 
 </body>
